kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: s65-2
spec:
  type: NodePort
  selector:
    app: account-service
  ports:
    - port: 80
      targetPort: 80
