kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: account-service-ingress
  namespace: s652
spec:
  rules:
    - host: account.delegate-market.nl
      http:
        paths:
          - backend:
              serviceName: account-service
              servicePort: 80
  tls:
    - hosts:
        - account.delegate-market.nl
      secretName: account-service-tls
status:
  loadBalancer:
    ingress:
      - {}
